--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -292,7 +292,7 @@ th {
 
 .schedule-container td, .schedule-container th {
 	border: 3px solid #656565;
-	padding: 20px 0 20px 0;
+	padding: 20px 0px 20px 0px;
 	box-sizing: border-box;
 	text-align: center;
 }
@@ -571,7 +571,7 @@ h4 {
 
 	#results {
 		max-width: 70%;
-		margin-right: 50px;
+		margin-right: 30px;
 	}
 	
 /*END OF PROFILE CARD STYLINGS*/
